--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
-    "mongoose": "^7.0.1"
+    "mongoose": "^7.0.1",
+    "colors": "^1.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.21",
